[tool.poetry]
name = "Paletter"
version = "0.1.0"
description = ""
authors = ["Lain <vvz.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
colorthief = "^0.2.1"
Pillow = "^9.0.1"
sty = "^1.0.0-rc.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"
pyinstaller = "^4.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
install = 'installer:install'